--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="forgot_password">Forgot Password?</string>
     <string name="first_time_user">First Time User?</string>
     <string name="sign_up">Sign Up</string>
+    <string name="logo">Logo</string>
 </resources>
