--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,5 +35,9 @@
     <string name="password_note">Note: Password must be 8-12 Characters long,\nalphanumberic with atleast 1 special character.</string>
     <string name="submit">Submit</string>
     <string name="registration_successful">Registration Successful !</string>
+    <string name="pin_generated_success">Pin generated Successfully !</string>
     <string name="generate_mpin">Generate MPIN</string>
+    <string name="login_now">Login Now</string>
+    <string name="set_new_pin">Set New Pin</string>
+    <string name="re_enter_pin">Re-enter Pin</string>
 </resources>
