--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,9 @@
     <!--validations-->
     <string name="user_id_cannot_be_empty">User ID cannot be empty</string>
     <string name="password_cannot_be_empty">Password cannot be empty</string>
+    <string name="password_not_valid">Password not valid</string>
+    <string name="password_not_matching">Password not matching</string>
+    <string name="enter_valid_otp">Enter valid OTP</string>
 
 
 </resources>
