--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,8 @@
     <string name="password_not_valid">Password not valid</string>
     <string name="password_not_matching">Password not matching</string>
     <string name="enter_valid_otp">Enter valid OTP</string>
+    <string name="pin_cannot_be_empty">Pin cannot be empty</string>
+    <string name="pin_not_matching">Pin not matching</string>
 
 
 </resources>
