--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="enter_user_id">Enter User ID</string>
     <string name="enter_your_user_id">Enter your User ID</string>
     <string name="enter_password">Enter Password</string>
-    <string name="login">LOGIN</string>
+    <string name="login">Login</string>
     <string name="forgot_password">Forgot Password?</string>
     <string name="first_time_user">First Time User?</string>
     <string name="sign_up">Sign Up</string>
