--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="check_internet_connection">Check your internet connection</string>
     <string name="test_custom_dialog_title">Test Custom Dialog</string>
     <string name="login_details_verified">Login Details Verified</string>
+    <string name="test_dialog_title">Test Dialog</string>
 
 
     <!--validations-->
