--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,16 @@
     <string name="test_custom_dialog_title">Test Custom Dialog</string>
     <string name="login_details_verified">Login Details Verified</string>
     <string name="test_dialog_title">Test Dialog</string>
+    <string name="enter_mpin">Enter mPin</string>
+    <string name="forgot_mpin">Forgot mPin ?</string>
+    <string name="ok">OK</string>
+    <string name="this_is_a_custom_dialog_box_where_text_will_be_displayed">This is a custom dialog box\nwhere text will be displayed</string>
+    <string name="add_new_lead_details">Add New Lead Details</string>
+    <string name="enter_lead_first_name">Enter Lead First Name</string>
+    <string name="enter_lead_last_name">Enter Lead Last Name</string>
+    <string name="enter_lead_mobile_number">Enter Lead Mobile Number</string>
+    <string name="save">Save</string>
+    <string name="back_to_lead_list">Back To Lead List</string>
 
 
     <!--validations-->
@@ -54,10 +64,10 @@
     <string name="enter_valid_otp">Enter valid OTP</string>
     <string name="pin_cannot_be_empty">Pin cannot be empty</string>
     <string name="pin_not_matching">Pin not matching</string>
-    <string name="enter_mpin">Enter mPin</string>
-    <string name="forgot_mpin">Forgot mPin ?</string>
-    <string name="ok">OK</string>
-    <string name="this_is_a_custom_dialog_box_nwhere_text_will_be_displayed">This is a custom dialog box\nwhere text will be displayed</string>
+    <string name="lead_first_name_cannot_be_empty">Lead first name cannot be empty </string>
+    <string name="lead_last_name_cannot_be_empty">Lead last name cannot be empty </string>
+    <string name="lead_mobile_number_cannot_be_empty">Lead mobile number cannot be empty </string>
+    <string name="please_select_lead_source">Please select lead source </string>
 
 
 </resources>
