item leads design adjusted , call recording and call log code added in CallStatusActivity and required permissions added in Android Manifest file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,7 @@
     <string name="enter_lead_mobile_number">Enter Lead Mobile Number</string>
     <string name="save">Save</string>
     <string name="back_to_lead_list">Back To Lead List</string>
+    <string name="permission_to_call_denied">Permission to make a call is denied</string>
 
 
     <!--validations-->
