--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,7 @@
     <string name="permission_to_call_denied">Permission to make a call is denied</string>
     <string name="something_went_wrong">Something Went Wrong</string>
     <string name="lead_number_already_exists">Lead Number Already Exists</string>
+    <string name="test_string_for_github">This String is to test github</string>
 
 
     <!--validations-->
