--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,6 +78,8 @@
     <string name="mobile_no">Mobile No.</string>
     <string name="spoke_to_customer">Spoke To Customer</string>
     <string name="did_not_speak_to_ncustomer">Did Not Speak To \nCustomer</string>
+    <string name="calls_scheduled_for_the_day">Calls Scheduled For The Day</string>
+    <string name="total">Total</string>
 
 
 </resources>
