--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,6 +87,7 @@
     <string name="calls_scheduled_for_the_month">Calls Scheduled For The Month</string>
     <string name="add">Add</string>
     <string name="cancel">Cancel</string>
+    <string name="loading">Loading...</string>
 
 
 </resources>
