--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,6 +88,7 @@
     <string name="add">Add</string>
     <string name="cancel">Cancel</string>
     <string name="loading">Loading...</string>
+    <string name="welcome_User">Welcome Tanisha!</string>
 
 
 </resources>
