--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,6 +90,11 @@
     <string name="cancel">Cancel</string>
     <string name="loading">Loading...</string>
     <string name="welcome_User">Welcome Tanisha!</string>
+    <string name="select_lead_source">Select Lead Source</string>
+    <string name="get_user_location">Get User Location</string>
+    <string name="latitude">Latitude</string>
+    <string name="longitude">Longitude</string>
+    <string name="save_in_local_db">Save In Local DB</string>
 
 
 </resources>
