--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,10 +91,13 @@
     <string name="loading">Loading...</string>
     <string name="welcome_User">Welcome Tanisha!</string>
     <string name="select_lead_source">Select Lead Source</string>
-    <string name="get_user_location">Get User Location</string>
+    <string name="get_user_location_and_save">Get User Location And Save</string>
     <string name="latitude">Latitude</string>
     <string name="longitude">Longitude</string>
     <string name="save_in_local_db">Save In Local DB</string>
+    <string name="retrieve_from_local_db">Retrieve from Local DB</string>
+    <string name="address">Address</string>
+    <string name="get_location_and_save">Get Location And Save</string>
 
 
 </resources>
