--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,6 +106,7 @@
   <string name="customer_name_cannot_be_empty">Customer name cannot be empty</string>
   <string name="customer_phone_cannot_be_empty">Customer phone cannot be empty</string>
     <string name="goto_customer_activity">Goto Customer Activity</string>
-    <string name="make_time_12_hour">Make Time 12 hour format</string>
+    <string name="make_time_12_hour">Make Timezone as 12 hour format</string>
+    <string name="make_time_24_hour">Make Timezone as 24 hour format</string>
 
 </resources>
