--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -167,6 +167,7 @@
     <string name="schedule_visit">Schedule Visit</string>
     <string name="update_schedule">Update Schedule</string>
     <string name="schedule_update_successfully">Schedule Updated Successfully</string>
+    <string name="calls_for_the_day">Calls For The Day</string>
 
 
 </resources>
