--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -176,6 +176,10 @@
     <string name="lead_interaction">Lead Interaction</string>
     <string name="lead_history">Lead History</string>
     <string name="close">Close</string>
+    <string name="no_response_busy">No Response/ \nBusy</string>
+    <string name="not_reachable_switched_off">Not Reachable/ \nSwitched Off</string>
+    <string name="number_is_invalid">Number Is \nInvalid</string>
+    <string name="spoke_to_friend_family_member">Spoke To Friend/ \nFamily Member</string>
 
 
 </resources>
