Toolbar title textStyle changed to normal in activity_dpdactivity, activity_main_activity3_api, activity_loan_collection and on clicking Asked To Call Back Later in PaymentNotificationOfCustomerActivity redirected to ScheduleVisitForCollectionActivity and title will become Schedule Call and bottom button will become Update

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -195,6 +195,8 @@
     <string name="loan_taken_by_relative">Loan Taken By Relative</string>
     <string name="please_specify_name_and_contact_number">Please Specify Name &amp; Contact No.</string>
     <string name="km">km</string>
+    <string name="schedule_call">Schedule Call</string>
+    <string name="update">Update</string>
     <string name="calling_1_30_dpd">Calling-1 to 30 DPD</string>
     <string name="calling_31_60_dpd">Calling-31 to 60 DPD</string>
     <string name="calling_above_60_dpd">Calling-Above 60 DPD</string>
