custom_dialog_image_picker.xml added in PaymentModeStatusActivity and PaymentInfoOfCustomerActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -208,6 +208,9 @@
     <string name="partial_amount_paid">Partial Amount Paid</string>
     <string name="full_amount_paid">Full Amount Paid</string>
     <string name="scheduler">Scheduler</string>
+    <string name="skip_and_proceed">Skip and Proceed</string>
+    <string name="upload_receipt">Upload Receipt</string>
+    <string name="proceed">Proceed</string>
 
 
 </resources>
