--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -216,6 +216,7 @@
     <string name="capture">Capture</string>
     <string name="details_of_customer">Details Of Customer</string>
     <string name="call_details_of_customer">Call Details Of Customer</string>
+    <string name="not_spoke_to_customer">Not Spoke To Customer</string>
 
 
 </resources>
