PaymentModeActivity , activity_payment_mode , activity_details_of_customer , activity_call_detail_of_customer proper changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -219,6 +219,7 @@
     <string name="not_spoke_to_customer">Not Spoke To Customer</string>
     <string name="visit_complete">Visit Complete</string>
     <string name="payment_notification">Payment Notification</string>
+    <string name="payment_mode">Payment Mode</string>
 
 
 </resources>
