Date max length made to 10

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -220,6 +220,8 @@
     <string name="visit_complete">Visit Complete</string>
     <string name="payment_notification">Payment Notification</string>
     <string name="payment_mode">Payment Mode</string>
+    <string name="call_complete">Call Complete</string>
+    <string name="payment_status">Payment Status</string>
 
 
 </resources>
