--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,7 +77,7 @@
     <string name="please_select_lead_source">Please select lead source </string>
     <string name="call_status">Call Status</string>
     <string name="mobile_no">Mobile No.</string>
-    <string name="spoke_to_customer">Spoke To The\nCustomer</string>
+    <string name="spoke_to_customer">\u00A0\u00A0\u00A0Spoke To The Customer\u00A0\u00A0\u00A0</string>
     <string name="did_not_speak_to_ncustomer">Did Not Speak To Customer</string>
     <string name="calls_scheduled_for_the_day">Calls Scheduled For The Day</string>
     <string name="schedule_for_the_day">Schedule For The Day</string>
@@ -223,6 +223,7 @@
     <string name="call_complete">Call Complete</string>
     <string name="payment_status">Payment Status</string>
     <string name="payment_information">Payment Information</string>
+    <string name="calling_npa_customer">Calling - NPA Customer</string>
 
 
 </resources>
