--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,7 +138,7 @@
     <string name="total_amt_paid">Total Amt. Paid</string>
     <string name="enter_amount">Enter Amount</string>
     <string name="full_amt_paid">Full Amt Paid</string>
-    <string name="will_pay_later">\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0Will Pay Later\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0</string>
+    <string name="will_pay_later">Will Pay Later</string>
     <string name="needs_waiver">Needs Waiver</string>
     <string name="others">Others</string>
     <string name="please_specify">Please Specify</string>
