Second Half Constraint possible height fix to match all screens bottoms

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -225,6 +225,7 @@
     <string name="payment_status">Payment Status</string>
     <string name="payment_information">Payment Information</string>
     <string name="calling_npa_customer">Calling - NPA Customer</string>
+    <string name="google_maps">Google Maps</string>
 
 
 </resources>
