In activity_call_status_with_products , Spoke to the customer , Did not spoke to Customer String changes with break line

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,7 +78,9 @@
     <string name="call_status">Call Status</string>
     <string name="mobile_no">Mobile No.</string>
     <string name="spoke_to_customer">\u00A0\u00A0\u00A0Spoke To The Customer\u00A0\u00A0\u00A0</string>
+    <string name="spoke_to_customer_break">Spoke To The \nCustomer</string>
     <string name="did_not_speak_to_ncustomer">Did Not Speak To Customer</string>
+    <string name="did_not_speak_to_ncustomer_break">Did Not Speak \nTo Customer</string>
     <string name="calls_scheduled_for_the_day">Calls Scheduled For The Day</string>
     <string name="schedule_for_the_day">Schedule For The Day</string>
     <string name="total">Total</string>
